# SilverSprint

./: .gitignore  .gitmodules  LICENSE  README.md  editing.html  index.html  installation.html  params.json  using.html
Arduino/: ss_basic.hex
apps/Silversprints/: CMakeLists.txt
apps/Silversprints/assets/shaders/: RaceProgress.frag
apps/Silversprints/blocks/OSC/src/cinder/osc/: Osc.cpp  Osc.h
apps/Silversprints/blocks/ParticleSystem/: ParticleSystem.h
apps/Silversprints/blocks/Serial/lib/serial/src/impl/: unix.cc
apps/Silversprints/blocks/Sharkbox/tools/: Utils.h
apps/Silversprints/include/: Resources.h  Version.h
apps/Silversprints/include/app/: GFXMain.h
apps/Silversprints/include/data/: Config.h  CsvLogger.h  GFXGlobal.h  LIEGLogger.h  Model.h  PlayerData.h  SerialReader.h  StateManager.h
apps/Silversprints/include/ui/: BaseButton.h  CheckBox.h  CiTextField.h  CountDownGfx.h  NumStepper.h  RaceText.h  StartStopButton.h  ToggleBtn.h  WinnerModal.h
apps/Silversprints/include/views/: NavBarView.h  RaceView.h  RosterView.h  SettingsView.h
apps/Silversprints/resources/: ssIcn.icns
apps/Silversprints/src/: SilverSprintApp.cpp
apps/Silversprints/src/app/: GFXMain.cpp  SSManager.cpp
apps/Silversprints/src/data/: GFXGlobal.cpp  Model.cpp  SerialReader.cpp  StateManager.cpp
apps/Silversprints/src/ui/: BaseButton.cpp  CheckBox.cpp  CiTextField.cpp  CountDownGfx.cpp  NumStepper.cpp  RaceText.cpp  StartStopButton.cpp  ThickLine.cpp  ToggleBtn.cpp  WinnerModal.cpp
apps/Silversprints/src/views/: NavBarView.cpp  RaceView.cpp  RosterView.cpp  SettingsView.cpp
apps/Silversprints/vc2013/: SilverSprint.sln  SilverSprint.vcxproj  SilverSprint.vcxproj.filters
apps/Silversprints/xcode/: Info.plist
apps/Silversprints/xcode/SilverSprint.xcodeproj/: project.pbxproj
include/: PlayerData.h  Resources.h  Version.h
src/: BaseButton.cpp  BaseButton.h  CiTextField.h  CountDownGfx.cpp  (+31 more)
(+93 files in other folders)
